Refactor code after autograded